--- a/main_API.ipynb
+++ b/main_API.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e5c203",
+   "id": "aa4c82cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,28 +287,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "581c269e",
+   "execution_count": 120,
+   "id": "d9e597ae",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicate rows are: 19\n"
+      "Website skyscanner.it:\n",
+      "- Airlines total: 1406\n",
+      "- Unique row: 1387\n",
+      "- Duplicate rows: 19\n"
      ]
     }
    ],
    "source": [
-    "#check & count duplicates rows\n",
+    "#check & count rows\n",
+    "print(\"Website skyscanner.it:\")\n",
+    "\n",
+    "df_num_s = len(df_sky)\n",
+    "print(f\"- Airlines total: {df_num_s}\")      \n",
+    "\n",
+    "df_sky_unique = len(df_sky_sorted.drop_duplicates())\n",
+    "print(f\"- Unique row: {df_sky_unique}\")\n",
+    "\n",
     "sky_nrows_double = len(df_sky_sorted) - len(df_sky_sorted.drop_duplicates())\n",
-    "print(f\"Duplicate rows are: {sky_nrows_double}\")"
+    "print(f\"- Duplicate rows: {sky_nrows_double}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "fca77a39",
+   "id": "f6d5b570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e59913cc",
+   "id": "a768ce7c",
    "metadata": {},
    "source": [
     "<a id = '2.1'></a>\n",
@@ -338,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b682c117",
+   "id": "39a0c0ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "43bcf6b2",
+   "id": "aeb3f53d",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9ced1d59",
+   "id": "ba6af2be",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bf8b2d8d",
+   "id": "569a0db6",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "aee900fe",
+   "id": "a3416cea",
    "metadata": {
     "scrolled": true
    },
@@ -604,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "df189127",
+   "id": "508b0643",
    "metadata": {},
    "outputs": [
     {
@@ -620,16 +631,8 @@
    ],
    "source": [
     "len(rows)\n",
-    "#7365 definitivo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "442b6e57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#7365 definitivo\n",
+    "\n",
     "#A_6501___3476\n",
     "#B_6987___3708\n",
     "#C_7295___3872\n",
@@ -639,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cb65a7f5",
+   "id": "846d55cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,8 +661,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "e7c8822a",
+   "execution_count": 123,
+   "id": "5221ce32",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +687,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>AIRLINE</th>\n",
-       "      <th>IMgG</th>\n",
        "      <th>COUNTRY</th>\n",
        "      <th>INFORMATION</th>\n",
        "    </tr>\n",
@@ -693,35 +695,30 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AB Airlines</td>\n",
-       "      <td></td>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>inactive (with supported aircraft)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Aba Air</td>\n",
-       "      <td></td>\n",
        "      <td>Czech Republic</td>\n",
        "      <td>inactive (with supported aircraft)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ABC Air Hungary</td>\n",
-       "      <td></td>\n",
        "      <td>Hungary</td>\n",
        "      <td>inactive (with supported aircraft)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Abelag Airways</td>\n",
-       "      <td></td>\n",
        "      <td>Belgium</td>\n",
        "      <td>inactive (with supported aircraft)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ABS Jets</td>\n",
-       "      <td></td>\n",
        "      <td>Czech Republic</td>\n",
        "      <td>4 aircraft</td>\n",
        "    </tr>\n",
@@ -730,21 +727,21 @@
        "</div>"
       ],
       "text/plain": [
-       "           AIRLINE IMgG           COUNTRY                          INFORMATION\n",
-       "0      AB Airlines         United Kingdom   inactive (with supported aircraft)\n",
-       "1          Aba Air         Czech Republic   inactive (with supported aircraft)\n",
-       "2  ABC Air Hungary                Hungary   inactive (with supported aircraft)\n",
-       "3   Abelag Airways                Belgium   inactive (with supported aircraft)\n",
-       "4         ABS Jets         Czech Republic                          4 aircraft "
+       "           AIRLINE           COUNTRY                          INFORMATION\n",
+       "0      AB Airlines    United Kingdom   inactive (with supported aircraft)\n",
+       "1          Aba Air    Czech Republic   inactive (with supported aircraft)\n",
+       "2  ABC Air Hungary           Hungary   inactive (with supported aircraft)\n",
+       "3   Abelag Airways           Belgium   inactive (with supported aircraft)\n",
+       "4         ABS Jets    Czech Republic                          4 aircraft "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#create df \n",
+    "#create df airfleets\n",
     "len(rows)\n",
     "heading = ['AIRLINE','IMgG','COUNTRY','INFORMATION']\n",
     "df_af = pd.DataFrame(columns=heading)\n",
@@ -753,206 +750,76 @@
     "        r = [el.replace('\\n','') for el in  r]\n",
     "        df_af.loc[len(df_af)] = r\n",
     "\n",
+    "df_af = df_af.drop(columns=['IMgG'])\n",
     "df_af.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "133f4ce7",
+   "execution_count": 122,
+   "id": "6db02181",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AIRLINE</th>\n",
-       "      <th>IMgG</th>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>INFORMATION</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AB Airlines</td>\n",
-       "      <td></td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Aba Air</td>\n",
-       "      <td></td>\n",
-       "      <td>Czech Republic</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ABC Air Hungary</td>\n",
-       "      <td></td>\n",
-       "      <td>Hungary</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Abelag Airways</td>\n",
-       "      <td></td>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABS Jets</td>\n",
-       "      <td></td>\n",
-       "      <td>Czech Republic</td>\n",
-       "      <td>4 aircraft</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7360</th>\n",
-       "      <td>ZIPAIR Tokyo</td>\n",
-       "      <td></td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>7 aircraft</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7361</th>\n",
-       "      <td>Zoom Air</td>\n",
-       "      <td></td>\n",
-       "      <td>India</td>\n",
-       "      <td>3 aircraft</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7362</th>\n",
-       "      <td>Zoom Airlines</td>\n",
-       "      <td></td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7363</th>\n",
-       "      <td>Zoom Airlines UK</td>\n",
-       "      <td></td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>inactive (with supported aircraft)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7364</th>\n",
-       "      <td>ZYB Lily Jet</td>\n",
-       "      <td></td>\n",
-       "      <td>China</td>\n",
-       "      <td>3 aircraft</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7365 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               AIRLINE IMgG           COUNTRY  \\\n",
-       "0          AB Airlines         United Kingdom   \n",
-       "1              Aba Air         Czech Republic   \n",
-       "2      ABC Air Hungary                Hungary   \n",
-       "3       Abelag Airways                Belgium   \n",
-       "4             ABS Jets         Czech Republic   \n",
-       "...                ...  ...               ...   \n",
-       "7360      ZIPAIR Tokyo                  Japan   \n",
-       "7361          Zoom Air                  India   \n",
-       "7362     Zoom Airlines                 Canada   \n",
-       "7363  Zoom Airlines UK         United Kingdom   \n",
-       "7364      ZYB Lily Jet                  China   \n",
-       "\n",
-       "                              INFORMATION  \n",
-       "0      inactive (with supported aircraft)  \n",
-       "1      inactive (with supported aircraft)  \n",
-       "2      inactive (with supported aircraft)  \n",
-       "3      inactive (with supported aircraft)  \n",
-       "4                             4 aircraft   \n",
-       "...                                   ...  \n",
-       "7360                          7 aircraft   \n",
-       "7361                          3 aircraft   \n",
-       "7362   inactive (with supported aircraft)  \n",
-       "7363   inactive (with supported aircraft)  \n",
-       "7364                          3 aircraft   \n",
-       "\n",
-       "[7365 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_af"
+    "'''\n",
+    "to do\n",
+    "- elimmina colonna img\n",
+    "- conta righe con il numero aerei (eliminare parola aircraft?)\n",
+    "- conta righe inactive\n",
+    "- conta le mergiate\n",
+    "\n",
+    "Evntuali GRAFICI\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "7d131341",
+   "execution_count": 121,
+   "id": "b10b49fa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Airlines total: 7365\n",
-      "Duplicates rows: 3438\n",
-      "Unique row: 3927\n"
+      "Website airfleets.net:\n",
+      "- Airlines total: 7365\n",
+      "- Unique row: 3927\n",
+      "- Duplicates rows: 3438\n"
      ]
     }
    ],
    "source": [
-    "#check & count duplicates rows\n",
+    "#check & countrows\n",
+    "print(\"Website airfleets.net:\")\n",
+    "\n",
     "df_num = len(df_af)\n",
-    "df_af_nrows_double = len(df_af) - len(df_af.drop_duplicates()) #totali-univoci\n",
+    "print(f\"- Airlines total: {df_num}\")      \n",
+    " \n",
     "df_af_unique = len(df_af.drop_duplicates())\n",
-    "print(f\"Airlines total: {df_num}\")               \n",
-    "print(f\"Duplicates rows: {df_af_nrows_double}\")\n",
-    "print(f\"Unique row: {df_af_unique}\")\n"
+    "print(f\"- Unique row: {df_af_unique}\")\n",
+    "\n",
+    "df_af_nrows_double = len(df_af) - len(df_af.drop_duplicates()) #totali-univoci\n",
+    "print(f\"- Duplicates rows: {df_af_nrows_double}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "0f92e558",
+   "execution_count": 128,
+   "id": "e03eaddf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export to excell\n",
-    "df_no_duplicates = df_new.drop_duplicates()\n",
-    "df_no_duplicates.to_excel(\"df_airfleets_clean.xlsx\", index=False)"
+    "#export to excell clean file\n",
+    "df_no_duplicates = df_af.drop_duplicates()\n",
+    "df_no_duplicates.to_csv(\"df_airfleets_clean.csv\", index=False)\n",
+    "df_no_duplicates.to_json(\"df_airfleets_clean.json\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ae5334b0",
+   "id": "01e2e82b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -960,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70faa2d",
+   "id": "b73d9d40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -968,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83602e6c",
+   "id": "73a25f28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -976,39 +843,210 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3555636b",
+   "id": "5cfddf5f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Delete duplicate data\n",
-    "unique_rows = []\n",
-    "seen = set()\n",
-    "\n",
-    "for row in rows:\n",
-    "    if tuple(row) not in seen:\n",
-    "        seen.add(tuple(row))\n",
-    "        unique_rows.append(row)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c039b68",
+   "id": "d924f3e7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(len(rows))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057600b1",
+   "id": "573ed1d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_new.to_excel('Airfleets_new.xlsx', index = False)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa7fc7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb4fb93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20577a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9946f299",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ecb5c28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "239f8045",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f32f55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07430e57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f16eefc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd07ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0afbb45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ba84498",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67718c27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "643f894b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26f5804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b9c9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fc058e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28f8195b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef727ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb637073",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1811ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fd89282",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d2dd70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1095,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8e605b",
+   "id": "c6b25ce7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1111,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd99725c",
+   "id": "27447667",
    "metadata": {
     "scrolled": true
    },
