Created repository Docker Hub

--- a/main.ipynb
+++ b/main.ipynb
@@ -3683,36 +3683,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "be0c2fc3",
+   "execution_count": 46,
+   "id": "5597a8f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CREA DEFF Mappa non interattiva ---SOLO PER STAMPA PER LA TESI\n",
+    "#CREA DEFF Mappa NON interattiva ---SOLO PER STAMPA PER LA TESI\n",
     "\n",
-    "#prendi directory corrente\n",
+    "#directory corrente + dove salvi la mappa\n",
     "project_directory = os.getcwd()\n",
-    "\n",
-    "#percorso completo al file HTML della mappa nella directory del progetto\n",
     "map_path = os.path.join(project_directory, \"temp_map.html\")\n",
     "\n",
     "#creazione istanza del driver di Firefox\n",
     "driver = webdriver.Firefox()\n",
     "\n",
-    "#dimensione personalizzata finestra del browser\n",
+    "#dimensione personalizzata finestra browser\n",
     "driver.set_window_size(1100, 700) #1920, 1080\n",
     "\n",
-    "#apri file HTML della mappa dalla directory del progetto\n",
+    "#apri file HTML della mappa dalla directory \n",
     "driver.get(\"file://\" + map_path)\n",
     "\n",
-    "#aspetta 5 secondi\n",
+    "#wait 5 secondi, utile perchè prima dello shot puoi spostare/ridimensionare la mappa\n",
     "time.sleep(5)\n",
     "\n",
-    "#screenshot mappa + salvataggio come PNG\n",
+    "#screenshot + salvataggio come PNG\n",
     "driver.save_screenshot(\"map_screenshot.png\")\n",
-    "\n",
-    "#chiudi browser\n",
-    "driver.quit()\n"
+    "driver.quit()"
    ]
   },
   {
@@ -3803,7 +3799,7 @@
     }
    ],
    "source": [
-    "#Crea IMPORTANTE!!!!\n",
+    "#Crea .... IMPORTANTE!!!!\n",
     "df_af_clean = pd.read_excel('df_airfleets_clean.xlsx')\n",
     "\n",
     "active_count = 0\n",
@@ -3885,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2910801",
+   "id": "667bc358",
    "metadata": {},
    "outputs": [],
    "source": []
