--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "fe48ce53",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "ba4daecf",
    "metadata": {},
    "outputs": [],
@@ -215,10 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "9aea2cca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.skyscanner.it/sitemap/voli-tutte-le-compagnie-aeree?page=1\n",
+      "https://www.skyscanner.it/sitemap/voli-tutte-le-compagnie-aeree?page=2\n",
+      "https://www.skyscanner.it/sitemap/voli-tutte-le-compagnie-aeree?page=3\n",
+      "1406\n"
+     ]
+    }
+   ],
    "source": [
     "ua = UserAgent()\n",
     "ua.random\n",
@@ -250,10 +261,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "af5e8d71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AIRLINE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>40-Mile Air</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664</th>\n",
+       "      <td>748 Air Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>9 Air</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>AB Aviation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>AIS Airlines</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              AIRLINE\n",
+       "95        40-Mile Air\n",
+       "664  748 Air Services\n",
+       "234             9 Air\n",
+       "499       AB Aviation\n",
+       "796      AIS Airlines"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create df \n",
     "len(linee_aeree)\n",
@@ -268,10 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "d9e597ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Website skyscanner.it:\n",
+      "- Airlines total: 1406\n",
+      "- Unique row: 1387\n",
+      "- Duplicate rows: 19\n"
+     ]
+    }
+   ],
    "source": [
     "#check & count rows\n",
     "print(\"Website skyscanner.it:\")\n",
@@ -292,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "f6d5b570",
    "metadata": {},
    "outputs": [],
@@ -387,7 +472,8 @@
    },
    "outputs": [],
    "source": [
-    "#recall def from utils.py for create lowercase alphabet\n",
+    "#recall def from utils.py for create lowercase alphabet \n",
+    "#SE PUOI RIMUOVI IL CHECK SU CODICE RESTITUITO COSì NON TI MANGIA PIù I DATI\n",
     "while(len(alphabet) > 0):\n",
     "    \n",
     "    print('https://www.airfleets.net/recherche/list-airline-{}.htm'.format(alphabet[0]))\n",
@@ -3684,7 +3770,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5597a8f4",
+   "id": "33640542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3881,7 +3967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667bc358",
+   "id": "31bf85cb",
    "metadata": {},
    "outputs": [],
    "source": []
