--- a/main.ipynb
+++ b/main.ipynb
@@ -74,7 +74,7 @@
    "id": "16cd1899",
    "metadata": {},
    "source": [
-    "<h1 style=\"font-family:Calibri;color:black;font-size:197%;text-align:center\">The Art and Science of API Design:Crafting Connectivity in & out of Business </h1>\n",
+    "<h1 style=\"font-family:Calibri;color:black;font-size:197%;text-align:center\">The Art and Science of API Design: Crafting Connectivity in & out of Business </h1>\n",
     "\n",
     "<h1 style=\"font-family:Calibri;color:black;font-size:117%;text-align:center\">Master Data science - a.a. 2022-2023 \n",
     "Final Project</h1>\n",
@@ -134,7 +134,7 @@
    "id": "5d64a743",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:orange;font-size:250%;text-align:center;border-radius:50px;padding:10px 30px;\">Index</h1>"
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:#ffcc00;font-size:250%;text-align:center;border-radius:50px;padding:10px 30px;\">Index</h1>"
    ]
   },
   {
@@ -143,12 +143,12 @@
    "metadata": {},
    "source": [
     "- [Libraries & Utilities](#1)\n",
-    "- [Skyscanner's airlines list](#2)\n",
-    "    - [Take data from site ](#2.1)\n",
+    "- [Skyscanner.it](#2)\n",
+    "    - [Take airlines list from site](#2.1)\n",
     "    - [Analysis of values](#2.2)\n",
     "    - [Definition of the Data Transformation Pipeline](#2.3)\n",
     "- [Airfleets.net](#3)\n",
-    "    - [Outcome](#3.1)\n",
+    "    - [Take data from site](#3.1)\n",
     "    - [Refinement of the selected model](#3.2)\n",
     "    - [Learning curves & Validation curves](#3.3)\n",
     "- [Conclusions](#4)"
@@ -160,12 +160,12 @@
    "metadata": {},
    "source": [
     "<a id = '1'></a>\n",
-    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:blue;font-size:250%;text-align:center;border-radius:50px;padding:10px 30px;\">Libraries</h1>"
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:#666699;font-size:250%;text-align:center;border-radius:50px;padding:10px 30px;\">Libraries</h1>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "ba4daecf",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "<a id = '2'></a>\n",
-    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:orange;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Skyscanner.it airlines list</h1>"
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:#0066ff;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Skyscanner.it</h1>"
    ]
   },
   {
@@ -393,15 +393,15 @@
    "metadata": {},
    "source": [
     "<a id = '3'></a>\n",
-    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:green;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Airfleets.net data</h1>"
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:green;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Airfleets.net</h1>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a768ce7c",
+   "id": "2d62d382",
    "metadata": {},
    "source": [
-    "<a id = '2.1'></a>\n",
+    "<a id = '3.1'></a>\n",
     "<h1 style=\"font-size: 150%;\">Take data from site </h1>"
    ]
   },
@@ -712,6 +712,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d38e661",
+   "metadata": {},
+   "source": [
+    "<a id = '3'></a>\n",
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:#9933ff;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Merge Skyscanner.it & Airfleets.net data --- sezione ok</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6de5605",
+   "metadata": {},
+   "source": [
+    "### Data cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6550cff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean airlines Skyscanner\n",
+    "df_sky = pd.read_excel('df_skyscanners_clean.xlsx')\n",
+    "\n",
+    "#recall def from utils.py for clean column value\n",
+    "ut.clean_column(df_sky, 'AIRLINE')\n",
+    "\n",
+    "#recall def from utils.py for delete column duplicates\n",
+    "cleaned_df_sky = ut.process_column(df_sky, 'AIRLINE')\n",
+    "\n",
+    "print(\"\\nNow the df has:\", len(cleaned_df_sky), \"rows - (originally 1387)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20cf062f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean airfleets data\n",
+    "df_af = pd.read_excel('df_airfleets_clean.xlsx')\n",
+    "\n",
+    "#duplicates the entire df\n",
+    "df_af['AIRLINE_copy'] = df_af['AIRLINE'].copy()\n",
+    "df_af['COUNTRY_copy'] = df_af['COUNTRY'].copy()\n",
+    "df_af['INFORMATION/N.AIRCRAFT_copy'] = df_af['INFORMATION/N.AIRCRAFT'].copy()\n",
+    "\n",
+    "#recall def from utils.py for clean column value (only for one column)\n",
+    "ut.clean_column(df_af, 'AIRLINE')\n",
+    "\n",
+    "#recall def from utils.py for delete column duplicates\n",
+    "cleaned_df_af = ut.process_column(df_af,['AIRLINE', 'COUNTRY', 'INFORMATION/N.AIRCRAFT'])\n",
+    "\n",
+    "print(\"\\nNow the df has:\", len(cleaned_df_af), \"rows - (originally 4031)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9dc901",
+   "metadata": {},
+   "source": [
+    "### Merge and extract 10 random values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7a193b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge both df\n",
+    "res_merge_df = pd.merge(cleaned_df_af, cleaned_df_sky, on='AIRLINE', how='inner')\n",
+    "#counts value for discard value = 0\n",
+    "count_airlines = res_merge_df['AIRLINE'].value_counts()\n",
+    "companies_with_more_than_1_occurrence = count_airlines[count_airlines >= 1]\n",
+    "print(\"Companies with more than 1 occurrence:\")\n",
+    "print(companies_with_more_than_1_occurrence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3ae28c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#deleted modified columns for came back original values\n",
+    "res_merge_df.drop(columns=['AIRLINE', 'COUNTRY', 'INFORMATION/N.AIRCRAFT'], inplace=True)\n",
+    "#rename the copied columns by deleting '_copy'\n",
+    "res_merge_df.rename(columns={'AIRLINE_copy': 'AIRLINE', 'COUNTRY_copy': 'COUNTRY', 'INFORMATION/N.AIRCRAFT_copy': 'INFORMATION/N.AIRCRAFT'}, inplace=True)\n",
+    "print(res_merge_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "45c7fe12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save merge on excel\n",
+    "res_merge_df.to_excel(\"res_merge_df.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0ef05da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              AIRLINE         COUNTRY  \\\n",
+      "528      Mahogany Air          Zambia   \n",
+      "588        Orange2fly          Greece   \n",
+      "386      GLO Airlines             USA   \n",
+      "693  Skywest Airlines       Australia   \n",
+      "103         Air Sinai           Egypt   \n",
+      "469           Job Air  Czech Republic   \n",
+      "674        Silver Air        Djibouti   \n",
+      "809      VIM Airlines          Russia   \n",
+      "320   Ernest Airlines           Italy   \n",
+      "567           Nordica         Estonia   \n",
+      "\n",
+      "                                INFORMATION/N.AIRCRAFT  \n",
+      "528                 inactive (with supported aircraft)  \n",
+      "588                 inactive (with supported aircraft)  \n",
+      "386                 inactive (with supported aircraft)  \n",
+      "693  inactive (with supported aircraft)Renamed / Me...  \n",
+      "103                 inactive (with supported aircraft)  \n",
+      "469  inactive (with supported aircraft)Renamed / Me...  \n",
+      "674                 inactive (with supported aircraft)  \n",
+      "809                 inactive (with supported aircraft)  \n",
+      "320                 inactive (with supported aircraft)  \n",
+      "567                 inactive (with supported aircraft)  \n"
+     ]
+    }
+   ],
+   "source": [
+    "res_merge_df = pd.read_excel('res_merge_df.xlsx')\n",
+    "#extract 5 random rows from df_inactive\n",
+    "df_inactive = res_merge_df[res_merge_df['INFORMATION/N.AIRCRAFT'].str.contains('inactive')]\n",
+    "#the random_state parameter if specified extracts the same values in successive executions\n",
+    "df_random  = df_inactive.sample(n=10, random_state=42)  \n",
+    "print(df_random)    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7c10da39",
@@ -722,13 +876,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08570d27",
+   "cell_type": "markdown",
+   "id": "76e277e0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#--------------------------------------------------------------------------------"
+    "<a id = '3'></a>\n",
+    "<h1 style=\"background-color:#eaeaea;font-family:Calibri;color:dark;font-size:250%;text-align:center;border-radius: 50px;padding:10px 30px\">Varie</h1>"
    ]
   },
   {
@@ -3770,7 +3923,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "33640542",
+   "id": "0e7656e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3967,7 +4120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31bf85cb",
+   "id": "8f0e7b6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4163,54 +4316,6 @@
    "metadata": {},
    "source": [
     "<font size=\"4\" color=magenta> The best seems to be: </font> <font size=\"4\"><b> LogisticRegression </font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cea3940",
-   "metadata": {},
-   "source": [
-    "<a id = '3.2'></a>\n",
-    "<h1 style=\"font-size: 150%;\">Refinement of the selected model</h1>\n",
-    "\n",
-    "Previously, we selected one of the best candidate models. Now, we perform the hyperparameter optimization again by fixing the modelling approach and varying the hyperparameters in a range close to that of the selected "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5cea486",
-   "metadata": {},
-   "source": [
-    "<a id = '3.3'></a>\n",
-    "<h1 style=\"font-size: 150%;\">Learning curves & Validation curves </h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7537ced4",
-   "metadata": {},
-   "source": [
-    "The graph shows the learning curve to assess how the performance of the model varies with the size of the training set.\n",
-    "\n",
-    "The blue curve shows the accuracy of the model on the training set, while the green curve shows the accuracy on the validation set; the variance of the results is indicated by the coloured areas.\n",
-    "\n",
-    "The accuracy of the model decreases rapidly as the size of the training set increases, then increases and finally stabilises. There are no overfitting problems, the accuracy line on the training set is never much higher than that on the validation set, so there is no loss of generality."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6b25ce7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96b4f05d",
-   "metadata": {},
-   "source": [
-    "As noted earlier, some stroke-related categorical data show who are most at risk. Multiple attempts, with as many algorithms, did not result in exceeding the 30% accuracy value, this does not exclude that additional investigation may lead to the identification of better models."
    ]
   }
  ],
